--- a/modules/server/src/main/resources/templates/node/ssh/edit.html
+++ b/modules/server/src/main/resources/templates/node/ssh/edit.html
@@ -51,6 +51,17 @@
                        lay-verify="required">
             </div>
         </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">编码格式</label>
+            <div class="layui-input-block">
+                <select name="charset" lay-verify="required" lay-search="">
+                    <option value="">请选择编码格式</option>
+                    <option th:selected="${(item==null && c.name()=='UTF-8') || (item?.charset==c.name())}"
+                            th:value="${c.name()}" th:each="c : ${charsets}"
+                            th:text="${c.name()}"></option>
+                </select>
+            </div>
+        </div>
         <div class="layui-form-item" style="padding-left: 20%">
             <button class="layui-btn layui-btn-normal" lay-submit lay-filter="submit">提交
             </button>
