--- a/modules/server/src/main/resources/templates/node/ssh/list.html
+++ b/modules/server/src/main/resources/templates/node/ssh/list.html
@@ -15,7 +15,7 @@
 <script type="text/html" id="bar_monitor">
     <a href="javascript:;" th:if="${session.user.isSystemUser()}" class="layui-btn  layui-btn-sm layui-btn-normal"
        lay-event="update">编辑</a>
-    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="terminal">终端</a>
+    <a href="javascript:;" class="layui-btn  layui-btn-sm  layui-btn-warm" lay-event="terminal">终端</a>
 </script>
 <script type="text/javascript">
     var col = [
