--- a/modules/server/src/main/resources/templates/node/ssh/terminal.html
+++ b/modules/server/src/main/resources/templates/node/ssh/terminal.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/xterm@3.14.5/dist/xterm.js"></script>
     <style>
         body {
-            padding: 0;
+            padding: 10px;
         }
     </style>
 </head>
