--- a/modules/server/src/main/resources/templates/node/ssh/edit.html
+++ b/modules/server/src/main/resources/templates/node/ssh/edit.html
@@ -62,6 +62,13 @@
                 </select>
             </div>
         </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">文件目录</label>
+            <div class="layui-input-block">
+                <textarea name="fileDirs" placeholder="授权可以直接访问的目录，多个回车换行即可"
+                          class="layui-textarea" th:text="${fileDirs}"></textarea>
+            </div>
+        </div>
         <div class="layui-form-item" style="padding-left: 20%">
             <button class="layui-btn layui-btn-normal" lay-submit lay-filter="submit">提交
             </button>
