--- a/modules/server/src/main/resources/templates/node/ssh/file.html
+++ b/modules/server/src/main/resources/templates/node/ssh/file.html
@@ -51,7 +51,7 @@
 
     function getData(path, children, preData) {
         loadingAjax({
-            url: './list_data.json',
+            url: './list_file_data.json',
             data: {
                 id: id,
                 path: path,
