--- a/modules/server/src/main/resources/templates/index.html
+++ b/modules/server/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo" th:title="'版本时间:'+${jpomManifest.timeStamp}+'，进程ID:'+${jpomManifest.pid}">
-            Jpom项目管理系统<font style="font-size: 10px;" th:text="'('+${jpomManifest.version}+')'"></font>
+            Jpom项目管理系统<span style="font-size: 10px;" th:text="'('+${jpomManifest.version}+')'"></span>
         </div>
         <ul class="layui-nav layui-layout-left">
 
