--- a/modules/server/src/main/resources/templates/node/ssh/file.html
+++ b/modules/server/src/main/resources/templates/node/ssh/file.html
@@ -7,7 +7,7 @@
         #btnDiv {
             width: 240px;
             height: 200px;
-            padding: 10px;
+            padding: 30px 10px 10px;
         }
     </style>
 </head>
@@ -36,7 +36,7 @@
             <button type="button" id="download" class="layui-btn layui-btn-fluid">下载</button>
         </div>
         <div class="layui-form-item">
-            <button type="button" id="tail" class="layui-btn layui-btn-fluid">tail</button>
+            <button type="button" id="tail" class="layui-btn layui-btn-fluid">文件终端</button>
         </div>
     </form>
 </div>
@@ -130,6 +130,9 @@
                         });
                         return;
                     }
+                    if (data.children && data.children.length > 0) {
+                        return;
+                    }
                     getData(nowPath, data.parentDir, data);
                 }
             });
@@ -148,9 +151,9 @@
             }
             var tailPtah = nowPath + "/" + clickData.parentDir;
             tabChange({
-                id: id,
+                id: id + tailPtah,
                 url: './node/ssh/terminal.html?id=' + id + "&tail=" + tailPtah,
-                title: '终端',
+                title: clickData.name + ' - 文件终端',
             });
         });
     }
