--- a/modules/server/src/main/resources/templates/user/list.html
+++ b/modules/server/src/main/resources/templates/user/list.html
@@ -34,6 +34,7 @@
     var col = [
         {field: 'id', title: 'id'},
         {field: 'name', title: '昵称'},
+        {field: 'email', title: '邮箱'},
         {field: 'serverManager', templet: "#manager_status", title: '是否是管理员'},
         {field: 'parent', title: '创建人'},
         {field: 'op', title: '操作', align: 'center', toolbar: '#bar_projects', fixed: 'right'}
