xterm 资源本地化

--- a/modules/server/src/main/resources/templates/login.html
+++ b/modules/server/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
         <div class="layui-col-md4 layui-col-md-offset4">
             <form class="layui-form" method="post" action="userLogin">
                 <div class="layui-form-item" style="color: #FFF; font-size: 24px;text-align: center;">
-                    <span>项目管理系统</span>
+                    <span>Jpom项目管理系统</span>
                 </div>
                 <div class="layui-form-item">
                     <div class="layui-input-block" style="margin-left: 0px;">
