支持netty下载文件

--- a/modules/server/src/main/resources/templates/node/ssh/file.html
+++ b/modules/server/src/main/resources/templates/node/ssh/file.html
@@ -144,7 +144,7 @@
             if (!clickData) {
                 return;
             }
-            window.open("./download.html?id=" + id + "&path=" + nowPath + "&name=" + clickData.parentDir);
+            window.open("http://localhost:8888?id=" + id + "&path=" + nowPath + "&name=" + clickData.parentDir);
             layer.close(openLayuiIndex);
         });
 
