--- a/modules/server/src/main/resources/templates/node/ssh/file.html
+++ b/modules/server/src/main/resources/templates/node/ssh/file.html
@@ -30,6 +30,17 @@
         </div>
     </div>
 </form>
+<form class="layui-form" action="">
+    <div class="layui-form-item">
+        <label class="layui-form-label">文件夹</label>
+        <div class="layui-input-block">
+            <div class="layui-progress layui-progress-big" lay-filter="demo" lay-showPercent="true">
+                <div class="layui-progress-bar" lay-percent="0%">下载</div>
+            </div>
+        </div>
+    </div>
+</form>
+
 <div class="layui-container" style="display: none;" id="btnDiv">
     <form class="layui-form">
         <div class="layui-form-item">
