--- a/modules/server/src/main/resources/templates/node/ssh/file.html
+++ b/modules/server/src/main/resources/templates/node/ssh/file.html
@@ -35,7 +35,7 @@
         <label class="layui-form-label">文件夹</label>
         <div class="layui-input-block">
             <div class="layui-progress layui-progress-big" lay-filter="demo" lay-showPercent="true">
-                <div class="layui-progress-bar" lay-percent="0%">下载</div>
+                <div class="layui-progress-bar layui-bg-blue" lay-percent="0%">下载</div>
             </div>
         </div>
     </div>
@@ -60,6 +60,40 @@
     var allData;
     var clickData;
     var openLayuiIndex;
+    var ee;
+    layui.use('element', function(){
+         ee = layui.element;
+    });
+
+     if ("WebSocket" in window) {
+         var ws = new WebSocket("ws://localhost:8888");
+         ws.onopen = function () {
+             //发送授权
+             var authContent =  new AuthContent(1,"[[${session.user.getUserMd5Key()}]]")
+             ws.send(JSON.stringify(authContent));
+
+         }
+         ws.onmessage = function (evt) {
+             var received_msg = evt.data;
+             if(received_msg.indexOf("%")>0){
+                 ee.progress('demo', received_msg);
+             }else if("complete"== received_msg){
+                 ee.progress('demo', '100%');
+                 alert("下载成功！")
+             }else {
+                 alert(received_msg);
+             }
+         };
+
+     }
+
+   function AuthContent(type, userId){
+        this.type = type;
+        this.userId = userId;
+    }
+
+
+
 
     function getData(path, children, preData) {
         loadingAjax({
@@ -152,6 +186,7 @@
         });
 
         $("#download").click(function () {
+            ee.init()
             if (!clickData) {
                 return;
             }
